Dream 1696 fix/UI bug (#159)
* vertical adaptation
* adaptability
* adaptive
* fix
* deleted unused
* fix scrollbar
* fix SidePanelHeader

--- a/services/frontend/src/components/Buttons/TopbarButton/TopbarButton.module.scss
+++ b/services/frontend/src/components/Buttons/TopbarButton/TopbarButton.module.scss
@@ -1,6 +1,6 @@
 .topbarBtn {
   height: 100%;
-  padding: 20px 8px;
+  // padding: 20px 8px;
 
   &:hover {
     background-color: $primary3;
