--- a/services/frontend/src/components/Modules/PromptBlocksModule/PromptBlocksModule.module.scss
+++ b/services/frontend/src/components/Modules/PromptBlocksModule/PromptBlocksModule.module.scss
@@ -3,26 +3,44 @@
   max-width: 146px;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   display: flex;
   padding: 12px 0;
   border-radius: 12px;
+  position: relative;
+  overflow: hidden;
 }
-
 .promptBlockModule,
 .block,
 .type {
   border: 1px solid $text3;
   background-color: $bcgrnd1;
 }
-
 .container {
-  overflow: auto;
-  padding: 0 12px;
   display: flex;
   flex-direction: column;
   gap: 4px;
   width: 100%;
+  position: absolute;
+  top: 12px;
+  bottom: 12px;
+  left: 0;
+  z-index: 1;
+  min-width: 100%;
+  outline: none;
+  resize: none;
+  @include b2;
+  border: none;
+  background-color: transparent;
+  white-space: pre-line;
+  overflow: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border: 1px solid transparent;
+  }
 }
 
 .block {
