--- a/services/frontend/src/components/Panels/CopilotSidePanel/CopilotSidePanel.module.scss
+++ b/services/frontend/src/components/Panels/CopilotSidePanel/CopilotSidePanel.module.scss
@@ -2,7 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  width: 368px;
+  // width: 368px;
 
   .textarea {
     @include b1;
@@ -36,7 +36,7 @@
 
 .container {
   position: relative;
-  width: 368px;
+  // width: 368px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -115,3 +115,4 @@
   overflow: hidden;
   place-content: center;
 }
+
