--- a/services/frontend/src/components/Panels/SidePanelHeader/SidePanelHeader.module.scss
+++ b/services/frontend/src/components/Panels/SidePanelHeader/SidePanelHeader.module.scss
@@ -7,10 +7,11 @@
   @include t2;
   align-items: center;
   gap: 8px;
+  padding-left: 24px;
+  padding-right: 60px;
 
   [role='tablist'] {
     display: flex;
-    padding: 0 60px 0 24px;
     gap: 24px;
     overflow: hidden;
     height: 100%;
@@ -24,6 +25,7 @@
     display: flex;
     flex-direction: row;
     width: fit-content;
+    align-items: center;
 
     @include text_ellipsis;
 
