--- a/services/frontend/src/components/Panels/SkillDialog/SkillDialog.module.scss
+++ b/services/frontend/src/components/Panels/SkillDialog/SkillDialog.module.scss
@@ -1,7 +1,7 @@
 .dialog {
-  min-width: 343px;
-  // max-width: 343px;
-  width: 343px;
+  min-width: 276px;
+  max-width: 380px;
+  width: 312px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -127,9 +127,11 @@
 .btns {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 24px;
+  gap: 16px;
   padding: 0 24px 24px 24px;
+  padding-bottom: 10px;
+  overflow: hidden;
+  justify-content: flex-end
 }
 
 .link {
