--- a/services/frontend/src/components/Widgets/Topbar/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/services/frontend/src/components/Widgets/Topbar/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -1,11 +1,13 @@
 .routes {
-  height: 100%;
+  // height: 100%;
   padding: 0 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
   white-space: nowrap;
   gap: 2px;
+  flex-wrap: nowrap;
+  overflow: hidden;
 
   .slash {
     @include lnks_n_btns4;
@@ -21,6 +23,9 @@
   margin: 1px 8px;
   @include b3;
   @include accent_text;
+  overflow: hidden;
+  min-width: 25px;
+
   a {
     @include text_ellipsis;
     display: block;
